--- a/web/formulario.html
+++ b/web/formulario.html
@@ -4,28 +4,25 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="bootstrap/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <script src="bootstrap/bootstrap.min.js" type="text/javascript"></script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
-    <body class="d-flex flex-column h-100">
-        <!-- Begin page content -->
-        <h1>Generación de números aleatorios</h1>
-        <main role="main" class="flex-shrink-0">
-            <div class="container">
-
-                <form method="POST" action="aleatoriop.jsp">
-                    <div class="form-group">
-                        <label for="sup">Límite superior</label>
-                        <input type="text" class="form-control" id="sup" aria-describedby="sup" placeholder="Introduce límite superior" name="sup">
-                    </div>
-                    <div class="form-group">
-                        <label for="inf">Límite inferior</label>
-                        <input type="text" class="form-control" id="inf" aria-describedby="inf" placeholder="Introduce límite inferior" name="inf">
-                    </div>
+    <body>
+        <div class="d-flex flex-column justify-content-center align-items-center m-5">
+            <h1>Generación de números aleatorios</h1>
+            <form class="m-1" method="POST" action="aleatoriop.jsp">
+                <div class="m-3">
+                    <label for="sup">Límite superior</label>
+                    <input type="text" class="form-control" id="sup" aria-describedby="sup" placeholder="Introduce límite superior" name="sup">
+                </div>
+                <div class="m-3">
+                    <label for="inf">Límite inferior</label>
+                    <input type="text" class="form-control" id="inf" aria-describedby="inf" placeholder="Introduce límite inferior" name="inf">
+                </div>
+                <div class="m-3">
                     <button type="submit" class="btn btn-primary">Enviar</button>
-                </form>
-            </div>
-        </main>
-
+                    <a  class ="btn btn-primary" href="index.html">Volver al inicio</a>
+                </div>
+            </form>
+        </div>
     </body>
 </html>
