--- a/web/index.html
+++ b/web/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Hola mundo JSP</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <body>
-        <h1>HOLA MUNDO</h1>
+        <div class="d-flex flex-column justify-content-center align-items-center m-5">
+            <h1>MONDUBLIO:</h1>
+            <h2>HOLA MUNDO JSP</h2>
+            <a href="holamundo.jsp">Prácticas</a>
+            <a href="formulario.html">Aleatorios</a>
+        </div>
     </body>
 </html>
